# simdeck

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  SimDeck.spec  config.py  effects.py  engine.py  installer.iss  lifx_controller.py  light_rig.py  log_setup.py  main.py  make_icon.py  moza_pedals.py  pyproject.toml  requirements.txt  run.py  settings_manager.py  simdeck.py  simhub_client.py  telemetry_logger.py  test_harness.py  test_sender.py
packaging/: make_icon.py
packaging/pyinstaller/: SimDeck.spec
packaging/windows/: installer.iss
src/simdeck/: __init__.py  __main__.py  config.py  effects.py  engine.py  headless.py  lifx_controller.py  light_rig.py  moza_pedals.py  settings_manager.py  simdeck.py  telemetry_logger.py  udp_splitter.py
src/simdeck/ui/: app.py  constants.py  helpers.py  overlay.py  theme.py  widgets.py
src/simdeck/ui/tabs/: history.py  lifx.py  lights.py  logger.py  settings.py  splitter.py  test.py
tests/: test_harness.py
